--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
             </tr>
 
         </table>
-        <h1>MY CONTACT DETAILS</h1>
+        <h1>CONTACT DETAILS</h1>
         <ul>
             <li><a href = "https://accounts.google.com/ServiceLogin/signinchooser?elo=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Email: damfs99@gmail.com</a></li>
             <li>Phone number: 07064967914</li>
